--- a/content/issues/2019-02-13-builds.sr.ht-outage.md
+++ b/content/issues/2019-02-13-builds.sr.ht-outage.md
@@ -10,11 +10,17 @@ affected:
 section: issue
 ---
 
+**Rolling back migration**
+There are other problems with the new host - DNS is being rolled back to the old
+host and another attempt to migrate will be taken at a later date. If you
+updated your `/etc/hosts` entry, please reset it to the old host:
+`45.56.100.217`.
+
 **DNS error**:
 The builds.sr.ht DNS records were incorrectly updated to the wrong IP address,
 resulting in an outage which will last for the duration of the TTL
 (approximately 1 hour). A workaround is to add builds.sr.ht to your
 `/etc/hosts` file: the correct IP address is `173.195.146.148`. Please set a
-reminder to remove this entry, as futute DNS updates may cause local outages for
+reminder to remove this entry, as future DNS updates may cause local outages for
 you if you do not.
 {{< track "2019-02-13 15:12:00" >}}
