--- a/content/issues/2021-05-23-git.sr.ht-outage.md
+++ b/content/issues/2021-05-23-git.sr.ht-outage.md
@@ -1,5 +1,5 @@
 ---
-title: git.sr.ht disruption due to periodic denail-of-service originating from Google's Go module proxy
+title: git.sr.ht disruption due to periodic denial-of-service originating from Google's Go module proxy
 date: 2021-05-23 20:25:00
 resolved: false
 resolvedWhen: 
